--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <a href="https://apps.apple.com/tr/app/kita/id529479190">
       <img class="badge" src="./app_store.png" />
     </a>
-    <a class="contactus" href="mailto:webmaster@example.com">Contact us</a>
+    <a class="contactus" href="mailto:dincozdemir@gmail.com">Contact us</a>
   </div>
 </body>
 
