--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a href="https://play.google.com/store/apps/details?id=com.cipilsoft.kita">
       <img class="badge" src="./google_play.png" />
     </a>
-    <a href="https://apps.apple.com/tr/app/kita/id529479190">
+    <a href="https://apps.apple.com/us/app/kita/id1487379290?ls=1">
       <img class="badge" src="./app_store.png" />
     </a>
     <a class="contactus" href="mailto:dincozdemir@gmail.com">Contact us</a>
